--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "NeedlemanWunsch"
+name = "AlignmentAlgorithms"
 uuid = "3c894fce-1a5f-4a14-a547-781e8c68175f"
 authors = ["Kevin Bonham, PhD", "Ellie Gibbs", "Anika Luo"]
 version = "0.1.0"
